# herference

./: LICENSE  README.md  pyproject.toml  setup.cfg
herference/: LICENSE  __init__.py  align.py  api.py  batch.py  config.py  coref_sp.py  dataset.py  evaluator.py  filters.py  heads.py  manager.py  model.py  package_config.yaml  parser.py  utils.py  utils_torch.py
herference/tests/: test_config.py  test_model.py  test_spacy.py  texts.py
tests/: serialized_pred_example.json  test_model_forward.py  test_rules.py  test_serialized_preds.py  test_spacy.py
