[metadata]
name = herference
version = 0.1.0
author = Karol Saputa
description = Coreference Inference for Polish
long_description = Coreference Inference for Polish - a tool for coreference resolution in Polish language
url = https://github.com/ipipan/herference
keywords = nlp, coreference, polish
[options]
python_requires = >=3.7, <4
install_requires =
    transformers
    spacy
    spacy-alignments
    spacy-transformers
    torch
    tqdm
[options.extras_require]
test =
    pytest
    coverage
[options.package_data]
package_config =
    package_config.yaml